Fix logic and Swagger of file "book_rest.go"
